# petcare-triage-service

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.codex/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/ml/: inference-contract.md  model-task-decision.md
docs/ml/data/: aihub-561-pet-skin.md  consented-capture-buffer.md  dataset-scouting.md  gold-eval-set.md  gold-v0.intake.template.csv  gold-v0.manifest.example.jsonl  hf-vet-derm-dataset.md  (+12 more)
ml/: .gitignore  README.md  __init__.py  audit_gold_intake.py  audit_mendeley_labels.py  audit_silver_intake.py  build_cv_folds.py  build_gold_manifest.py  build_silver_manifest.py  check_gold_leakage.py  create_silver_intake_from_manifest.py  evaluate_gold.py  filter_roboflow_dedup.py  label_map.json  prepare_data.py  prepare_hf_vet_derm.py  prepare_roboflow.py  prepare_roboflow_prediction.py  requirements.txt  roboflow_compare_models.py  roboflow_smoke_test.py  sync_capture_buffer_to_hf.py  train_yolo_cls.py
services/triage-mock/: README.md  app.py  capture.py  requirements.txt  smoke_test.py
tests/: test_audit_gold_intake.py  test_audit_mendeley_labels.py  test_build_gold_manifest.py  test_build_silver_manifest.py  test_capture_buffer.py  test_check_gold_leakage.py  test_create_silver_intake_from_manifest.py  test_gold_manifest_schema.py  test_prepare_hf_vet_derm.py  test_prepare_roboflow_prediction.py  test_sync_capture_buffer_to_hf.py  test_triage_mock_smoke.py
(+11 files in other folders)
