[project]
name = "petcare-triage-service"
version = "0.1.0"
description = "ML/backend contract, mock service, and training assets for PetCare dermatology triage."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "jsonschema>=4.22",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.15.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
